2013-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.21 released.

2013-10-23  Carl Hetherington  <cth@carlh.net>

	* Use our own directory picker on Ubuntu 13.10 as well
	as Ubuntu 13.04 as it seems similarly broken.

2013-10-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.20 released.

2013-10-22  Carl Hetherington  <cth@carlh.net>

	* Allow films to be loaded when content is missing,
	and then that content can be re-found.

2013-10-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.19 released.

2013-10-21  Carl Hetherington  <cth@carlh.net>

	* Fix Rec. 709 gammas (from Lilian Lefranc)

2013-10-20  Carl Hetherington  <cth@carlh.net>

	* Allow specification of subtitle language even if DVD-o-matic
	isn't providing the subtitles.

2013-10-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.18 released.

2013-10-19  Carl Hetherington  <cth@carlh.net>

	* Fix non-saving of colour transform presets.

	* Some improvements in progress reporting, especially
	for long encodes.

2013-10-18  Carl Hetherington  <cth@carlh.net>

	* Fix bug with incorrect validity times given to KDMs.

2013-10-17  Carl Hetherington  <cth@carlh.net>

	* Fix Make DCP menu option sensitivity (#230).

	* Forward-port fix from master; use 1000000 rather
	than 1e6 for J2K bandwidth arithmetic to ensure
	that it's done with integers.

2013-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.17 released.

2013-10-16  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix crash on closing preferences window
	when ~/.config/dcpomatic does not exist.

	* Allow specification of the DCP to make KDMs for,
	in case there is more than one.

	* Speed up response to some settings changes
	(e.g. crop) (#196).

2013-10-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.16 released.

2013-10-15  Carl Hetherington  <cth@carlh.net>

	* Restore up/down buttons for simple content time
	movements.

	* Include film title in KDM filenames.

	* Allow no-stretch scaling like in DVD-o-matic.
