@@ -1,3 +1,8 @@
+2013-10-24  Carl Hetherington  <cth@carlh.net>
+
+	* Support sources that require repeat of more than
+	1 extra frame.
+
 2013-10-23  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.21 released.
